# fastapi-for-firebase

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.rst
fastapi_for_firebase/: env_helper.py
fastapi_for_firebase/cache_control/: middleware.py  strategic.py
fastapi_for_firebase/hosting/: __init__.py  middleware.py
tests/: test_env_helper.py
tests/test_cache_control/: test_classes.py  test_middleware.py  test_strategic.py
tests/test_hosting/: test_classes.py  test_middleware.py
